[package]
name = "thundercat"
version = "0.1.0"
description = "Thunder + Cat"
license = "Apache-2.0"
license-file = "LICENSE"
edition = "2021"
documentation = "https://docs.rs/thundercat"
repository = "https://github.com/MRGRAVITY817/thundercat"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
